Add unitType field to shopping products
